--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,8 @@ services:
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
       - "ConnectionStrings:SqlConnection=Server=sqlserver;Database=AuthDb;User Id=sa;Password=Numsey#2021;TrustServerCertificate=True;"
+      - "ConnectionStrings:SerilogSqlConnection=Server=sqlserver;Database=AppLogs;User Id=sa;Password=Numsey#2021;TrustServerCertificate=True;"
+      - "Logging:LogLevel:Serilog=Warning"
     depends_on:
       - sqlserver
     ports:
@@ -48,7 +50,7 @@ services:
       - ASPNETCORE_ENVIRONMENT=Development
       - "ConnectionStrings:SqlConnection=Server=sqlserver;Database=SchoolDb;User Id=sa;Password=Numsey#2021;TrustServerCertificate=True;"
       - "ConnectionStrings:SerilogSqlConnection=Server=sqlserver;Database=AppLogs;User Id=sa;Password=Numsey#2021;TrustServerCertificate=True;"
-      - "Logging:LogLevel:Serilog=Information"
+      - "Logging:LogLevel:Serilog=Warning"
     depends_on:
       - sqlserver
     ports:
@@ -66,7 +68,7 @@ services:
       - ASPNETCORE_ENVIRONMENT=Development
       - "ConnectionStrings:SqlConnection=Server=sqlserver;Database=SchoolDb;User Id=sa;Password=Numsey#2021;TrustServerCertificate=True;"
       - "ConnectionStrings:SerilogSqlConnection=Server=sqlserver;Database=AppLogs;User Id=sa;Password=Numsey#2021;TrustServerCertificate=True;"
-      - "Logging:LogLevel:Serilog=Information"
+      - "Logging:LogLevel:Serilog=Warning"
     depends_on:
       - sqlserver
     ports:
@@ -84,7 +86,7 @@ services:
       - ASPNETCORE_ENVIRONMENT=Development
       - "ConnectionStrings:SqlConnection=Server=sqlserver;Database=SchoolDb;User Id=sa;Password=Numsey#2021;TrustServerCertificate=True;"
       - "ConnectionStrings:SerilogSqlConnection=Server=sqlserver;Database=AppLogs;User Id=sa;Password=Numsey#2021;TrustServerCertificate=True;"
-      - "Logging:LogLevel:Serilog=Information"
+      - "Logging:LogLevel:Serilog=Warning"
       - "GatewayUrls:WebApiCourse=http://ms.services.courses.webapi"
       - "GatewayUrls:WebApiStudents=http://ms.services.students.webapi"
     depends_on:
