--- a/MS.WebUI/control-services/angular.json
+++ b/MS.WebUI/control-services/angular.json
@@ -32,7 +32,8 @@
             "styles": [
               "@angular/material/prebuilt-themes/purple-green.css",
               "src/assets/theme-custom/theme-custom.scss",
-              "src/styles.scss"
+              "src/styles.scss",
+              "src/assets/theme-custom/meterial.scss"
             ],
             "scripts": []
           },
