--- a/MS.WebUI/control-services/angular.json
+++ b/MS.WebUI/control-services/angular.json
@@ -35,7 +35,10 @@
               "src/styles.scss",
               "src/assets/theme-custom/meterial.scss"
             ],
-            "scripts": []
+            "scripts": [],
+            "allowedCommonJsDependencies" : [
+              "flat"
+            ]
           },
           "configurations": {
             "production": {
