--- a/MS.WebUI/control-services/package.json
+++ b/MS.WebUI/control-services/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^16.2.4",
     "@angular/platform-browser-dynamic": "^16.2.4",
     "@angular/router": "^16.2.4",
+    "@ngneat/transloco": "^5.0.7",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
