--- a/MS.WebUI/control-services/package.json
+++ b/MS.WebUI/control-services/package.json
@@ -25,6 +25,7 @@
     "bn-ng-idle": "^2.0.5",
     "chart.js": "^4.4.0",
     "jwt-decode": "^3.1.2",
+    "ngx-mask": "^16.3.1",
     "rxjs": "~7.8.0",
     "save": "^2.9.0",
     "tslib": "^2.3.0",
