--- a/MS.Services/MS.Services.Auth/MS.Services.Auth.Infra/MS.Services.Auth.Plugins/MS.Services.Auth.Plugins.csproj
+++ b/MS.Services/MS.Services.Auth/MS.Services.Auth.Infra/MS.Services.Auth.Plugins/MS.Services.Auth.Plugins.csproj
@@ -8,8 +8,9 @@
 
   
   <ItemGroup>
+    <PackageReference PrivateAssets="none" Include="FluentValidation.AspNetCore" Version="11.3.0" />
     <PackageReference Include="LcsEverton.MS.Libs.Infra.Plugins" Version="22.0.0" />
-    <PackageReference Include="FluentValidation" Version="11.7.1" />
+    <PackageReference PrivateAssets="none" Include="FluentValidation" Version="11.7.1" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.10" />
     <PackageReference PrivateAssets="none" Include="AutoMapper" Version="12.0.1" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
