--- a/MS.Services/MS.Services.Auth/docker-compose.yml
+++ b/MS.Services/MS.Services.Auth/docker-compose.yml
@@ -16,27 +16,8 @@ services:
       ACCEPT_EULA: 'Y'
       SA_PASSWORD: "Numsey#2021"
     volumes:
-      - mssql:/var/opt/mssql/data
+      - c:\dados\volumes\mssql:/var/opt/mssql/data
     ports:
       - 11433:1433
     networks:
-      - sql_server_network
-    expose:
-      - 1433
-
-  ms.services.auth.webapi:
-    image: msservicesauthwebapi
-    container_name: msservicesauthwebapi
-    build:
-      context: ./MS.Services/MS.Services.Auth/
-      dockerfile: ./MS.Services.Auth.WebAPI/Dockerfile
-    environment:
-      - ASPNETCORE_ENVIRONMENT=Development
-      - "ConnectionStrings:SqlConnection=Server=sqlserver;Database=AuthDb;User Id=sa;Password=Numsey#2021;TrustServerCertificate=True;"
-    depends_on:
-      - sqlserver
-    ports:
-      - '4000:80'
-    networks:
-      - sql_server_network
-      - backend
+      - 'backend'
